fetch api from angular js

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,8 @@
-
-
 <div class="navbar">
      <div>Navbar</div>
+     <div>
+          <h3>Angular js</h3>
+     </div>
      <div>
           <p>Title</p>
      </div>
