routing in this project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
 
-<app-fetchdata></app-fetchdata>
+<!-- <app-fetchdata></app-fetchdata> -->
 <!-- <app-home></app-home> -->
+<router-outlet></router-outlet>
