--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <div class="navbar">
-     <div>Navbar</div>
-     <div>
-          <h3>Angular js</h3>
-     </div>
-     <div>
-          <p>Title</p>
-     </div>
+     <a routerLink="home">Form</a>
+
+     <a routerLink="">Angular js</a>
+
+     <a routerLink="fetch">Products</a>
+
+
 </div>
